iac/config/local/cluster-yaml/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: internal

---
apiVersion: v1
kind: Namespace
metadata:
  name: external
